[metadata]
name = pydrobert-param
description = Utilities for the python package 'param'
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE
url = https://github.com/sdrobert/pydrobert-param
project_urls =
  Documentation = https://pydrobert-param.readthedocs.io
author = Sean Robertson
author_email = sdrobert@cs.toronto.edu
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find_namespace:
package_dir =
  = src
python_requires = >= 3.7
install_requires =
  param>=1.9

[options.entry_points]
console_scripts =
  combine-ini-files = pydrobert.param.command_line:combine_ini_files
  combine-json-files = pydrobert.param.command_line:combine_json_files
  combine-yaml-files = pydrobert.param.command_line:combine_yaml_files

[options.packages.find]
where = src

[options.extras_require]
yaml = ruamel.yaml>=0.15
optuna = optuna
types =
  numpy
  pandas
all =
  ruamel.yaml>=0.15
  optuna
  numpy
  pandas
